Se adapto el login al protipo figma

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -44,6 +44,6 @@
   <!-- Columna derecha con mural -->
   <div class="login-right">
     <div class="overlay"></div>
-    <img src="Pintura-Fiet.jpg" alt="Mural Universidad del Cauca" class="login-image">
+    <img src="Pintura-FIET.jpg" alt="Mural Universidad del Cauca" class="login-image">
   </div>
 </div>
