Se implemento que al loguear dependiendo del rol aparezca cierto contenido en el home

--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -18,15 +18,15 @@
           <mat-icon>school</mat-icon>
           <span>Cursos Intersemestrales</span>
         </li>
-        <li routerLink="/reingresos" routerLinkActive="active">
+        <li routerLink="/reingreso-estudiante" routerLinkActive="active">
           <mat-icon>person_add</mat-icon>
           <span>Gestionar Reingreso de Estudiante</span>
         </li>
-        <li routerLink="/homologaciones" routerLinkActive="active">
+        <li routerLink="/homologacion-asignaturas" routerLinkActive="active">
           <mat-icon>sync_alt</mat-icon>
           <span>Gestionar Homologación de Asignaturas</span>
         </li>
-        <li routerLink="/estadisticas" routerLinkActive="active">
+        <li routerLink="/modulo-estadistico" routerLinkActive="active">
           <mat-icon>bar_chart</mat-icon>
           <span>Módulo Estadístico</span>
         </li>
