--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,49 +1,1 @@
-<div class="login-wrapper">
-  <!-- Columna izquierda -->
-  <div class="login-left">
-    <div class="login-content">
-      <img src="Logo-Universidad-del-Cauca-vertical-1.png" 
-           alt="Logo Universidad del Cauca" 
-           class="login-logo">
-
-      <h2 class="login-title">Sistema de atención a estudiantes<br>de pregrado</h2>
-
-      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form">
-        <!-- Correo -->
-        <mat-form-field appearance="outline" class="login-input">
-          <mat-label>Correo</mat-label>
-          <input matInput type="email" formControlName="email" placeholder="mail@website.com">
-          <mat-error *ngIf="loginForm.controls['email'].invalid && loginForm.controls['email'].touched">
-            Ingresa un correo válido
-          </mat-error>
-        </mat-form-field>
-
-        <!-- Contraseña -->
-        <mat-form-field appearance="outline" class="login-input">
-          <mat-label>Contraseña</mat-label>
-          <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" placeholder="Min. 8 caracteres">
-          <button mat-icon-button matSuffix type="button" (click)="hide = !hide">
-            <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
-          </button>
-          <mat-error *ngIf="loginForm.controls['password'].invalid && loginForm.controls['password'].touched">
-            Ingresa tu contraseña
-          </mat-error>
-        </mat-form-field>
-
-        <mat-checkbox formControlName="remember">Recuérdame</mat-checkbox>
-
-        <button mat-raised-button type="submit" class="login-button" [disabled]="loginForm.invalid">
-          Ingresar
-        </button>
-
-        <a class="login-register" routerLink="/register">Registrarse</a>
-      </form>
-    </div>
-  </div>
-
-  <!-- Columna derecha con mural -->
-  <div class="login-right">
-    <div class="overlay"></div>
-    <img src="Pintura-FIET.jpg" alt="Mural Universidad del Cauca" class="login-image">
-  </div>
-</div>
+<div class="login-wrapper"> <!-- Columna izquierda --> <div class="login-left"> <div class="login-content"> <img src="Logo-Universidad-del-Cauca-vertical-1.png" alt="Logo Universidad del Cauca" class="login-logo"> <h2 class="login-title">Sistema de atención a estudiantes<br>de pregrado</h2> <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form"> <!-- Correo --> <mat-form-field appearance="outline" class="login-input"> <mat-label>Correo</mat-label> <input matInput type="email" formControlName="email" placeholder="mail@website.com"> <mat-error *ngIf="loginForm.controls['email'].invalid && loginForm.controls['email'].touched"> Ingresa un correo válido </mat-error> </mat-form-field> <!-- Contraseña --> <mat-form-field appearance="outline" class="login-input"> <mat-label>Contraseña</mat-label> <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" placeholder="Min. 8 caracteres"> <button mat-icon-button matSuffix type="button" (click)="hide = !hide"> <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon> </button> <mat-error *ngIf="loginForm.controls['password'].invalid && loginForm.controls['password'].touched"> Ingresa tu contraseña </mat-error> </mat-form-field> <mat-checkbox formControlName="remember">Recuérdame</mat-checkbox> <button mat-raised-button type="submit" class="login-button" [disabled]="loginForm.invalid"> Ingresar </button> <a class="login-register" routerLink="/register">Registrarse</a> </form> </div> </div> <!-- Columna derecha con mural --> <div class="login-right"> <div class="overlay"></div> <img src="Pintura-FIET.jpg" alt="Mural Universidad del Cauca" class="login-image"> </div> </div>
