--- a/src/app/pages/paz-salvo/paz-salvo.component.html
+++ b/src/app/pages/paz-salvo/paz-salvo.component.html
@@ -21,32 +21,33 @@
     </label>
     <input type="file" id="fileUpload" accept=".pdf" (change)="onFileSelected($event)" multiple>
 
-    <table class="uploaded-files-table" *ngIf="uploadedFiles.length > 0">
-      <thead>
-        <tr>
-          <th>Nombre del archivo</th>
-          <th>Fecha de carga</th>
-          <th>Validación</th>
-          <th>Acción</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let file of uploadedFiles; let i = index">
-          <td>{{ file.name }}</td>
-          <td>{{ file.date | date:'dd/MM/yyyy' }}</td>
-          <td>
-            <mat-icon [color]="isFileRequired(file.name) ? 'primary' : 'warn'">
-              {{ isFileRequired(file.name) ? 'check_circle' : 'error' }}
-            </mat-icon>
-          </td>
-          <td>
-            <button mat-icon-button color="warn" (click)="removeFile(i)">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+   <table class="uploaded-files-table" *ngIf="uploadedFiles.length > 0">
+  <thead>
+    <tr>
+      <th>Nombre del archivo</th>
+      <th>Fecha de carga</th>
+      <th>Validación</th>
+      <th>Acción</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let file of uploadedFiles; let i = index">
+      <td>{{ file.name }}</td>
+      <td>{{ file.date | date:'dd/MM/yyyy' }}</td>
+      <td>
+        <mat-icon class="validation-icon" [ngClass]="isFileRequired(file.name) ? 'valid' : 'invalid'">
+          {{ isFileRequired(file.name) ? 'check_circle' : 'error' }}
+        </mat-icon>
+      </td>
+      <td>
+        <button mat-icon-button class="delete-icon-btn" (click)="removeFile(i)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
 
     <button class="submit-btn" [disabled]="!canSubmit()" (click)="submitRequest()">Enviar solicitud</button>
   </div>
