--- a/src/app/pages/paz-salvo/paz-salvo.component.html
+++ b/src/app/pages/paz-salvo/paz-salvo.component.html
@@ -21,7 +21,7 @@
     </label>
     <input type="file" id="fileUpload" accept=".pdf" (change)="onFileSelected($event)" multiple>
 
-   <table class="uploaded-files-table" *ngIf="uploadedFiles.length > 0">
+ <table class="uploaded-files-table" *ngIf="uploadedFiles.length > 0">
   <thead>
     <tr>
       <th>Nombre del archivo</th>
@@ -31,7 +31,8 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let file of uploadedFiles; let i = index">
+    <tr *ngFor="let file of uploadedFiles; let i = index"
+        [ngClass]="isFileRequired(file.name) ? 'valid-file' : 'invalid-file'">
       <td>{{ file.name }}</td>
       <td>{{ file.date | date:'dd/MM/yyyy' }}</td>
       <td>
@@ -47,6 +48,7 @@
     </tr>
   </tbody>
 </table>
+
 
 
     <button class="submit-btn" [disabled]="!canSubmit()" (click)="submitRequest()">Enviar solicitud</button>
