--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,17 +2,12 @@
 <div class="welcome-container">
   <h2>Bienvenido, {{ userName }}</h2>
   <p>Rol: <strong>{{ role }}</strong></p>
-  <p class="description">
-    {{ getWelcomeText(role) }}
-  </p>
+  <p class="description">{{ getWelcomeText(role) }}</p>
 </div>
 
 <!-- Dashboard con tarjetas dinámicas -->
 <div class="dashboard-container">
-  <mat-card
-    class="dashboard-card"
-    *ngFor="let p of availableProcesses"
-    (click)="handleProcessClick(p)">
+  <mat-card class="dashboard-card" *ngFor="let p of availableProcesses" (click)="handleProcessClick(p)">
     <mat-icon class="dashboard-icon" [ngClass]="p.color">{{ p.icon }}</mat-icon>
     <span>{{ p.name }}</span>
   </mat-card>
